# MeanShiftClustering

./: CMakeLists.txt  ClusterCentroids.cpp  ClusterCentroids.h  Kernel.cpp  Kernel.h  KernelFlat.cpp  KernelFlat.h  KernelGaussian.cpp  KernelGaussian.h  MeanShift.cpp  MeanShift.h  MeanShiftParallel.cpp  MeanShiftParallel.h  MeanShiftSequential.cpp  MeanShiftSequential.h  Point.cpp  Point.h  README.md  chrono.txt  main.cpp  points.txt  points_10000.txt  points_25000.txt  points_50000.txt  script.py
project_report/: mean_shift_clustering_presentation.pptx
