cmake_minimum_required(VERSION 3.0.0)
project(MeanShift VERSION 0.1.0)
add_compile_options(-O3 -mpc32 -ffast-math -ftree-vectorize )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
add_executable(MeanShift main.cpp MeanShift.h MeanShift.cpp Point.h Point.cpp ClusterCentroids.h ClusterCentroids.cpp MeanShiftParallel.h MeanShiftParallel.cpp MeanShiftSequential.h MeanShiftSequential.cpp)
